k8s/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: deploy-status-checker
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
